navbar collapse issue resolved

--- a/core/src/App.css
+++ b/core/src/App.css
@@ -22,6 +22,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 400;
+  overflow-x: hidden;
+
 }
 .navbar-logo {
   width: 100px; /* Adjust width as needed */
@@ -453,19 +455,63 @@ textarea {
   opacity: 0;
 }
 
+#header .navbar-collapse .navbar-nav {
+  float: none;
+}
+
+#header .navbar-collapse .nav-item {
+  float: none;
+  display: block;
+  padding: 7px 0;
+}
+
+#header .navbar-collapse .navbar-nav {
+  margin: 0;
+}
+
+/* ---------navbar-ends---------- */
+
+
+
+
 #footer {
   background: #0F8BFF;
-  padding: 50px 0;
+  padding: 30px 0;
   color: #fff;
   text-align: center;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 #footer .copyright {
   margin: 0 0 15px;
 }
 
+#footer .socials ul {
+  padding: 0;
+  margin: 0;
+}
+
+/* #footer .socials a {
+  color: #fff;
+  font-size: 1.5rem;
+  margin: 0 10px;
+  transition: color 0.3s ease;
+} */
+
 #footer .socials a:hover {
   background: #0F8BFF;
+}
+
+@media (max-width: 576px) {
+  #footer {
+    padding: 20px 0;
+  }
+
+  #footer .socials a {
+    font-size: 1.2rem;
+    margin: 0 5px;
+  }
 }
 
 .block {
@@ -968,15 +1014,7 @@ textarea {
     padding: 10px 0;
   }
 
-  #header .navbar-collapse .navbar-nav {
-    float: none;
-  }
 
-  #header .navbar-collapse .nav-item {
-    float: none;
-    display: block;
-    padding: 7px 0;
-  }
 
   .hero-block .carousel-caption {
     left: 7%;
@@ -1024,9 +1062,7 @@ textarea {
     margin: 56px 0 0;
   }
 
-  #header .navbar-collapse .navbar-nav {
-    margin: 0;
-  }
+
 
   .block {
     padding: 40px 0 10px;
